Implement form login based on oken authentication

--- a/passport/src/main/resources/application.properties
+++ b/passport/src/main/resources/application.properties
@@ -15,7 +15,7 @@ security.social.wechat.app-secret=1bd81dee2043403988db1ca1fe949b8e
 # --------------------
 # Server
 # --------------------
-server.port=8088
+server.port=8200
 server.tomcat.uri-encoding=UTF-8
 
 logging.config=classpath:logback.xml
@@ -37,7 +37,7 @@ spring.thymeleaf.cache=false
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql:///passport?useSSL=false&amp;charset=utf8
 spring.datasource.username=root
-spring.datasource.password=111
+spring.datasource.password=yxd729844
 
 # --------------------
 # JPA
